# FungalFlye

./: DEPENDENCIES.csv  INSTALL.md  README.md  environment.yml  pyproject.toml
fungalflye/: assemble.py  cli.py  enhance.py  qc.py  wizard.py
fungalflye/dotplot/: BagelData.py  CdtFile.py  FastaFile.py  FastaGenome.py  Genome.py  Gff3.py  Locus.py  LocusTransform.py  MUMmerTools.py  PCA.py  __init__.py  dotplot.rplot  marksplotint.py  marksplotnoint.py  marksplotnoint_optimal.py  marksplotnointtest.py  marktestsort.py
fungalflye/dotplot/Rscriptmapping/: remappingR.R
fungalflye_qc/: lengths.tsv  stats.txt  telomere_summary.txt  telomeres.tsv
